--- a/DSA_101.ipynb
+++ b/DSA_101.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMH+TIKhswhf8QqSKoMXrtz",
+      "authorship_tag": "ABX9TyPAMMlvbTKngEJUFD0z7YeD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,10 +49,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Node"
+        "## Structures"
       ],
       "metadata": {
-        "id": "0ahrHu-E06TZ"
+        "id": "fnwf7h8dwAoP"
       }
     },
     {
@@ -71,6 +71,15 @@
       ],
       "metadata": {
         "id": "o8P4EkdD4poa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Node"
+      ],
+      "metadata": {
+        "id": "0ahrHu-E06TZ"
       }
     },
     {
@@ -414,108 +423,258 @@
     {
       "cell_type": "code",
       "source": [
-        "dict_a = {'a':1, 'b':2, 'c':3}\n",
-        "dict_b = {'f': 6, 'd':4}\n",
-        "# dict_comb = dict_a + dict_b #  type error- unsupported operand type +"
+        "class Node:\n",
+        "  def __init__(self, data):\n",
+        "    self.data = data\n",
+        "    self.next = None\n",
+        "\n",
+        "\n",
+        "class LinkedList:\n",
+        "  def __init__(self):\n",
+        "    self.head = None\n",
+        "\n",
+        "  def insert_at_begining(self, data):\n",
+        "    node1 = Node(data)\n",
+        "    node1.next = self.head # why this\n",
+        "    self.head = node1\n",
+        "\n",
+        "  def insert_at_end(self, data):\n",
+        "    node2 = Node(data)\n",
+        "    if self.head is None: #adding in empty list\n",
+        "      self.head = node2\n",
+        "      return\n",
+        "    curr_node = self.head # assigning head to  current node\n",
+        "    while curr_node.next: # traversing list to reach end then connecting new node to the end\n",
+        "      curr_node = curr_node.next\n",
+        "    curr_node.next = node2\n",
+        "\n",
+        "  def delete_node(self, key):\n",
+        "    curr_node = self.head         # initializing surrent node as head\n",
+        "    if curr_node and curr_node.data == key:   # looking for key in head\n",
+        "      self.head = curr_node.next              # if true then make next node as head and curr node as null\n",
+        "      curr_node = None\n",
+        "      return\n",
+        "    prev_node = None        #initializing prev node var\n",
+        "    while curr_node:        # traversing list using curr node var\n",
+        "      if curr_node.data == key: # if key in currnode.data, break loop and assign currnode to prev and next to curr\n",
+        "        break\n",
+        "      prev_node = curr_node\n",
+        "      curr_node = curr_node.next\n",
+        "\n",
+        "    if curr_node is None:\n",
+        "      return\n",
+        "    prev_node.next = curr_node.next\n",
+        "    curr_node = None\n",
+        "\n",
+        "  def print_linked_list(self):\n",
+        "    curr_node = self.head # assisnging first node(head) to curr variable\n",
+        "    linkedlist_str = \"\" # initiializing empty string\n",
+        "    while curr_node: # traversing list\n",
+        "      linkedlist_str+=str(curr_node.data) + '->' # adding nodes to str var\n",
+        "      curr_node = curr_node.next # moving to next node using curr variable\n",
+        "    linkedlist_str+= \"None\" # ending with none\n",
+        "    print(linkedlist_str)\n",
+        "\n",
+        "# l1 - create a l_list using the list\n",
+        "def create_from_list_input(l_data):\n",
+        "  #pick each elemnt of list in reverse add to begnin\n",
+        "  ll1 = LinkedList()\n",
+        "  for idx, ele in enumerate(l_data)):\n",
+        "    ll1.insert_at_begining(ele)\n",
+        "  return ll1"
       ],
       "metadata": {
-        "id": "AzwU5nRiHfTN"
+        "id": "PcAgTHTonWrX"
       },
-      "execution_count": 4,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "dict_b.update(dict_a)\n",
-        "dict_b"
-      ],
-      "metadata": {
-        "id": "ca4JPaUNJJab"
-      },
-      "execution_count": 5,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "keys_comb = list(dict_b.keys())\n",
-        "keys_comb.sort()\n",
-        "keys_comb"
+        "l_data1 = [1,2,3,4]\n",
+        "def create_from_list_input(l_data):\n",
+        "  #pick each elemnt of list in reverse add to begnin\n",
+        "  ll1 = LinkedList()\n",
+        "  for idx, ele in enumerate(l_data):\n",
+        "    ll1.insert_at_begining(ele)\n",
+        "  return ll1.print_linked_list()\n",
+        "create_from_list_input(l_data1)\n",
+        "# ll_new = create_from_list_input(l_data1)\n",
+        "# ll_new.print_linked_list()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "M_z99pG2IOyI",
-        "outputId": "fb27a2de-0324-4ac0-883a-305296cafd56"
+        "id": "z5TPO4nhg6ih",
+        "outputId": "3fd356b6-ab13-46bf-ad2a-9ef02ca9122b"
       },
-      "execution_count": 10,
+      "execution_count": 36,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['a', 'b', 'c', 'd', 'f']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4->3->2->1->None\n"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "dict1={}\n",
-        "for i in keys_comb:\n",
-        "  dict1[i]=dict_b.get(i)\n",
-        "dict1"
+        "l1=LinkedList()"
+      ],
+      "metadata": {
+        "id": "U1MLUWDwvywn"
+      },
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l1"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "lTlvGcHvnvBl",
-        "outputId": "837e0971-f93a-4b8c-ff14-c5e52cf1471f"
+        "id": "GKNOM_PFv2A0",
+        "outputId": "f9a1ec95-d2b2-43cf-fae9-7de200b1e551"
       },
-      "execution_count": 11,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'a': 1, 'b': 2, 'c': 3, 'd': 4, 'f': 6}"
+              "<__main__.LinkedList at 0x7ab8cb2ede10>"
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 22
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "dict_b."
+        "l1.insert_at_end(10)\n",
+        "l1.insert_at_end(20)\n",
+        "l1.insert_at_end(30)\n",
+        "l1.insert_at_begining(5)"
+      ],
+      "metadata": {
+        "id": "CBMgN64sv2wG"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l1.print_linked_list()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "fVa90UQZm4jZ",
-        "outputId": "c69e32ae-29ff-4742-93ca-c32e504e0caf"
+        "id": "IxcGDunJSM1o",
+        "outputId": "10d0d3bc-7eaa-45e4-95f2-8d1da2af7134"
       },
-      "execution_count": 6,
+      "execution_count": 24,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'f': 6, 'd': 4, 'a': 1, 'b': 2, 'c': 3}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5->10->20->30->None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l1.delete_node(20)\n",
+        "l1.print_linked_list()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V7488vTFSQCc",
+        "outputId": "c64a58a5-b944-4ce7-c426-b1efa425f641"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5->10->30->None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l1.delete_node(60)\n",
+        "l1.print_linked_list()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nwJz8fYTSjtA",
+        "outputId": "a536587d-0ba5-4d0a-9e37-965cf2ed491d"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5->10->30->None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l1.insert_at_end(31)\n",
+        "l1.insert_at_begining(4)"
+      ],
+      "metadata": {
+        "id": "CBmIPZIwSrhR"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l1.print_linked_list()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UdumJnAmTpxM",
+        "outputId": "ecca1b0a-bae5-4749-efc8-312a29a99fef"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4->5->10->30->31->None\n"
+          ]
         }
       ]
     },
@@ -523,7 +682,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "PcAgTHTonWrX"
+        "id": "7GCW_DaJTsAv"
       },
       "execution_count": null,
       "outputs": []
